--- a/app/src/main/res/layout/fragment_group_details.xml
+++ b/app/src/main/res/layout/fragment_group_details.xml
@@ -23,6 +23,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_group_name"
+                android:focusable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -41,6 +42,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/et_task"
+                android:focusable="false"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -70,33 +72,7 @@
             android:layout_marginHorizontal="16dp"/>
 
 
-        <LinearLayout
-            android:id="@+id/ll_add_user"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tv_add_user"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/add_user"
-                android:textSize="16sp" />
-
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_add"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/teal_700"
-                android:padding="8dp"
-                android:text="@string/plus_symbol"
-                android:textSize="24sp" />
-
-        </LinearLayout>
 
         <View
             android:layout_width="match_parent"
@@ -115,53 +91,35 @@
             android:text="@string/leader"
             android:textSize="16sp" />
 
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_set_leader"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="16dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/teal_700"
-            android:text="@string/set_the_lead"
-            android:textColor="@color/white" />
-
-        <TextView
-            android:id="@+id/tv_save"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:gravity="center"
-            android:text="@string/save_changes"
-            android:textSize="24sp" />
-
         <LinearLayout
             android:id="@+id/ll_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="16dp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_cancel"
+                android:id="@+id/btn_finish_work"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
-                android:background="#E91E63"
+                android:background="#009688"
                 android:padding="8dp"
-                android:text="@string/cancel" />
+                android:text="@string/finish_task" />
 
             <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/btn_save"
+                android:id="@+id/btn_request_call"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="4dp"
                 android:layout_weight="1"
                 android:background="@color/teal_700"
                 android:padding="8dp"
-                android:text="@string/save" />
+                android:text="@string/request_call" />
 
         </LinearLayout>
 
