--- a/app/src/main/res/layout/fragment_navigation.xml
+++ b/app/src/main/res/layout/fragment_navigation.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="8dp"
     android:layout_marginHorizontal="16dp"
+    android:layout_marginTop="8dp"
     android:orientation="vertical">
 
     <androidx.appcompat.widget.AppCompatButton
@@ -11,23 +11,32 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/teal_700"
-        android:text="@string/users"/>
+        android:text="@string/users" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_groups_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/teal_700"
         android:layout_marginTop="8dp"
-        android:visibility="gone"
-        android:text="@string/groups"/>
+        android:background="@color/teal_700"
+        android:text="@string/groups"
+        android:visibility="gone" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_my_group"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/teal_700"
         android:layout_marginTop="8dp"
-        android:text="@string/my_group"/>
+        android:background="@color/teal_700"
+        android:text="@string/my_group" />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_my_messages"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@color/teal_700"
+        android:text="@string/my_messages"
+        android:visibility="gone" />
 
 </LinearLayout>
