--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
+        android:layout_marginHorizontal="8dp"
         android:text="@string/messages"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
